# component-influxdb-2-ex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: component.py  configuration.py
tests/functional/01_long-single/source/: set_up.py
tests/functional/02_long-multiple/source/: set_up.py
tests/functional/02_long-multiple/source/data/: config.json
tests/functional/03_long-multiple-long-table-names/source/: set_up.py
tests/functional/05_wide-named-by-columns-long-table-names/source/: set_up.py
tests/functional/05_wide-named-by-columns-long-table-names/source/data/: config.json
tests/functional/06_wide-named-by-tag-values/source/data/: config.json
