[project]
name = "influxdb-2-extractor"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "flake8>=7.2.0",
    "freezegun>=1.5.1",
    "influxdb-client>=1.49.0",
    "keboola-component>=1.6.10",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.3",
    "ruff>=0.11.5",
]
