[project]
name = "influxdb-2-extractor"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datadirtest",
    "duckdb>=1.3.2",
    "flake8>=7.2.0",
    "freezegun>=1.5.1",
    "influxdb-client>=1.49.0",
    "keboola-component>=1.6.13",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.3",
    "ruff>=0.11.5",
]

[tool.uv.sources]
datadirtest = { git = "https://github.com/keboola/datadirtest" }
